--- a/build-com-arg/Dockerfile
+++ b/build-com-arg/Dockerfile
@@ -1,5 +1,7 @@
 FROM debian
 LABEL maintainer 'Aluno Cod3r <aluno at cod3r.com.br>'
 
+# Define um argumento para ser passado ao efetuar a criação da imagem
 ARG S3_BUCKET=files
+# Referencia o argumento a uma variável de ambiente
 ENV S3_BUCKET=${S3_BUCKET}
