--- a/build-com-copy/Dockerfile
+++ b/build-com-copy/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:latest
 LABEL maintainer 'Aluno Cod3r <aluno at cod3r.com.br>'
 
+# A ordem dos comandos não importa?
 RUN echo '<h1>Sem conteudo</h1>' > /usr/share/nginx/html/conteudo.html
 COPY *.html /usr/share/nginx/html/
