--- a/node-mongo-compose/docker-compose.yml
+++ b/node-mongo-compose/docker-compose.yml
@@ -4,14 +4,16 @@ services:
     image: mongo:3.4
   backend:
     image: node:8.1
+    # irá mapear os arquivos da pasta backend do projeto para backend dentro do container
     volumes:
       - ./backend:/backend
     ports:
       - 3000:3000
+    # entra na pasta, instala as dependências do projeto e executa o app.json  
     command: bash -c "cd /backend && npm i && node app"
   frontend:
     image: nginx:1.13
     volumes:
       - ./frontend:/usr/share/nginx/html/
     ports:
-      - 80:80
+      - 8080:80
